# claude-code-help

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  build_windows.sh
docs/: kuaijiejian.html
docs/plans/: 2026-03-17-claude-code-cheatsheet-design.md  2026-03-17-claude-code-cheatsheet.md  claude.html  xiegang.html
src/: app.rs  events.rs  lib.rs  main.rs
src/data/: builtin.rs  custom.rs  mod.rs
src/ui/: layout.rs  mod.rs  popup.rs  status_bar.rs  tabs.rs
