[package]
name = "rust-oss"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
arboard = "3.4"
once_cell = "1.19"
